@@ -1,4 +1,4 @@
-Copyright (c) 2007 James Adam
+Copyright (c) 2006 James Adam
 
 The MIT License
 
