@@ -1,5 +1,5 @@
 #--
-# Copyright (c) 2005 James Adam
+# Copyright (c) 2006 James Adam
 #
 # Permission is hereby granted, free of charge, to any person obtaining
 # a copy of this software and associated documentation files (the
@@ -19,6 +19,13 @@
 # LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
 # OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
 # WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+#
+#
+#
+# = IN OTHER WORDS:
+#
+# You are free to use this software as you please, but if it breaks you'd
+# come a'cryin...
 #++
 
 
